export const snapshot = {};

snapshot[`imagick plugin 1`] = `5`;

snapshot[`imagick plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".jpg",
      pageLoader: [AsyncFunction: binary],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".jpeg",
      pageLoader: [AsyncFunction: binary],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".png",
      pageLoader: [AsyncFunction: binary],
    },
  ],
}
`;

snapshot[`imagick plugin 3`] = `
[
]
`;

snapshot[`imagick plugin 4`] = `
{
  content: "Uint8Array(951)",
  data: {
    content: "Uint8Array(29014)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: undefined,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume-small.png",
  },
  dest: {
    ext: ".png",
    path: "/lume-small",
  },
  src: {
    ext: ".png",
    path: "/lume[0]",
    remote: undefined,
    slug: "lume",
  },
}
`;

snapshot[`imagick plugin 5`] = `
{
  content: "Uint8Array(951)",
  data: {
    content: "Uint8Array(29014)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: undefined,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume-big.png",
  },
  dest: {
    ext: ".png",
    path: "/lume-big",
  },
  src: {
    ext: ".png",
    path: "/lume[1]",
    remote: undefined,
    slug: "lume",
  },
}
`;

snapshot[`imagick plugin 6`] = `
{
  content: "Uint8Array(1231)",
  data: {
    content: "Uint8Array(29014)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: undefined,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume.jpg",
  },
  dest: {
    ext: ".jpg",
    path: "/lume",
  },
  src: {
    ext: ".png",
    path: "/lume[2]",
    remote: undefined,
    slug: "lume",
  },
}
`;

snapshot[`imagick plugin 7`] = `
{
  content: "Uint8Array(8648)",
  data: {
    content: "Uint8Array(29014)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: undefined,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume.webp",
  },
  dest: {
    ext: ".webp",
    path: "/lume",
  },
  src: {
    ext: ".png",
    path: "/lume[3]",
    remote: undefined,
    slug: "lume",
  },
}
`;

snapshot[`imagick plugin 8`] = `
{
  content: "Uint8Array(14407)",
  data: {
    content: "Uint8Array(29014)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: undefined,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/lume.png",
  },
  dest: {
    ext: ".png",
    path: "/lume",
  },
  src: {
    ext: ".png",
    path: "/lume[4]",
    remote: undefined,
    slug: "lume",
  },
}
`;
